# src/main/kotlin/com/kcrud/api/routes/admin/AccessTokenRoute.kt
@@ -4,11 +4,12 @@
  * For a copy, see <https://opensource.org/licenses/MIT>
  */
 
-package com.kcrud.api.routes.system
+package com.kcrud.api.routes.admin
 
 import com.kcrud.config.env.security.authentication.AuthenticationToken
 import com.kcrud.config.settings.AppSettings
 import com.kcrud.plugins.RateLimitScope
+import com.kcrud.utils.NetworkUtils
 import io.ktor.http.*
 import io.ktor.server.application.*
 import io.ktor.server.auth.*
@@ -42,7 +43,7 @@ fun Route.accessTokenRoute() {
 
     route("auth/token") {
 
-        // Endpoint for initial token generation; requires Basic Authentication.
+        // Endpoint for initial token generation; requires Basic Authentication credentials.
         rateLimit(RateLimitName(name = RateLimitScope.NEW_AUTH_TOKEN.key)) {
             authenticate(AppSettings.security.basicAuth.providerName) {
                 // Creates a new token and responds with it.
@@ -54,6 +55,8 @@ fun Route.accessTokenRoute() {
 
         // Endpoint for token refresh.
         // No Basic Authentication is required here, but an existing token's validity will be checked.
+        // For example, in Postman set the endpoint and in the Headers add an Authorization key
+        // with a 'Bearer' holding a previous valid token.
         post("refresh") {
             val tokenState = AuthenticationToken.getState(call)
 
@@ -75,5 +78,24 @@ fun Route.accessTokenRoute() {
                 }
             }
         }
+
+        // Alternative example showing how to create tokens via the browser URL.
+        // The browser URL requires a GET instead of a POST.
+        authenticate(AppSettings.security.basicAuth.providerName) {
+            // Generate auth tokens via the browser URL.
+            get("form-create") {
+                call.respondWithToken()
+            }
+        }
     }
+
+    NetworkUtils.logEndpoints(
+        reason = "Authentication Tokens. Requires an authorization header",
+        endpoints = listOf("auth/token/create", "auth/token/refresh")
+    )
+
+    NetworkUtils.logEndpoints(
+        reason = "New Authentication Tokens via the browser URL",
+        endpoints = listOf("auth/token/form-create")
+    )
 }
